add getting all events with full info
